--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "godotTools.editorPath.godot4": "e:\\GodotEngine\\cs\\Godot_v4.3-stable_mono_win64\\Godot_v4.3-stable_mono_win64.exe",
+  "godotTools.editorPath.godot4": "E:/GodotEngine/cs/Godot_v4.3-stable_mono_win64/Godot_v4.3-stable_mono_win64.exe",
 }
