--- a/Phigros Chart Engine.csproj
+++ b/Phigros Chart Engine.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'android' ">net7.0</TargetFramework>
     <TargetFramework Condition=" '$(GodotTargetPlatform)' == 'ios' ">net8.0</TargetFramework>
-    <LangVersion>preview</LangVersion>
+    <LangVersion>12.0</LangVersion>
     <EnableDynamicLoading>true</EnableDynamicLoading>
     <RootNamespace>PhigrosChartEngine</RootNamespace>
   </PropertyGroup>
